# commons

./: BUILD_POLICY.md  Cargo.toml  NAMING_POLICY.md  RELEASE_SET.md  TEST_PLAN.md  TEST_SEEDS.md  WORKFLOW_METHODOLOGY.md  build.sh  versions.toml
.github/workflows/: build-all.yml  build-single.yml  build_docker.yml  build_lib.yml  release.yml  release_orchestrator.yml  verify-versions.yml  verify_consensus.yml
docs/: BUILD_SYSTEM.md
docs/runner/: PERFORMANCE_OPTIMIZATION.md
ops/: RUNNER_FLEET.md  SELF_HOSTED_RUNNER.md
scripts/: collect-artifacts.sh  create-release.sh  setup-build-env.sh  verify_formal_coverage.sh
templates/: RELEASE.md  SECURITY.md
templates/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
templates/.github/ISSUE_TEMPLATE/: bug_report.md
templates/devcontainer/consensus-proof/: devcontainer.json
templates/devcontainer/governance-app/: devcontainer.json
templates/devcontainer/protocol-engine/: devcontainer.json
templates/devcontainer/reference-node/: devcontainer.json
templates/governance-app/.github/workflows/: deploy.yml
test-vectors/: README.md
tools/: bootstrap_runner.sh  build_release_set.sh  det_build.sh  dev  make_verification_bundle.sh  run_phase.sh  run_suite.sh
