[package]
name = "bllvm"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLLVM - Bitcoin Low-Level Virtual Machine node binary"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "node", "blockchain", "cryptocurrency", "p2p"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.82"

[[bin]]
name = "bllvm"
path = "src/bin/main.rs"

[dependencies]
bllvm-node = { path = "../bllvm-node", package = "bllvm-node" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "=1.48.0", features = ["full", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

